// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-babel (rspack mode) > should merge environment and shared babel config 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": false,
                "refresh": false,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
          },
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-babel/compiled/babel-loader/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-class-properties/lib/index.js",
            [
              "babel-plugin-import",
              {
                "libraryDirectory": "es",
                "libraryName": "components",
                "style": true,
              },
            ],
            [
              "babel-plugin-import",
              {
                "libraryDirectory": "es",
                "libraryName": "components-1",
                "style": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
          ],
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`plugin-babel (rspack mode) > should merge environment and shared babel config 2`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": false,
                "refresh": false,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
          },
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-babel/compiled/babel-loader/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-class-properties/lib/index.js",
            [
              "babel-plugin-import",
              {
                "libraryDirectory": "es",
                "libraryName": "components-1",
                "style": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
          ],
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`plugin-babel (rspack mode) > should not set babel-loader when babel config not modified 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": false,
                "refresh": false,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`plugin-babel (rspack mode) > should set babel-loader when babel config modified 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": false,
                "refresh": false,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
          },
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-babel/compiled/babel-loader/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-class-properties/lib/index.js",
            [
              "babel-plugin-import",
              {
                "libraryDirectory": "es",
                "libraryName": "xxx-components",
                "style": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
          ],
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`plugin-babel (rspack mode) > should set babel-loader when environment babel config defined 1`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": false,
                "refresh": false,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
          },
        },
      },
      {
        "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/plugin-babel/compiled/babel-loader/index.js",
        "options": {
          "babelrc": false,
          "compact": false,
          "configFile": false,
          "plugins": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-decorators/lib/index.js",
              {
                "version": "legacy",
              },
            ],
            "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-class-properties/lib/index.js",
            [
              "babel-plugin-import",
              {
                "libraryDirectory": "es",
                "libraryName": "components",
                "style": true,
              },
            ],
          ],
          "presets": [
            [
              "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
              {
                "allExtensions": true,
                "allowDeclareFields": true,
                "allowNamespaces": true,
                "isTSX": true,
                "optimizeConstEnums": true,
              },
            ],
          ],
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;

exports[`plugin-babel (rspack mode) > should set babel-loader when environment babel config defined 2`] = `
[
  {
    "resolve": {
      "fullySpecified": false,
    },
    "test": /\\\\\\.m\\?js/,
  },
  {
    "dependency": {
      "not": "url",
    },
    "include": [
      {
        "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
      },
      /\\\\\\.\\(\\?:ts\\|tsx\\|jsx\\|mts\\|cts\\)\\$/,
    ],
    "resolve": {
      "alias": {
        "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
      },
    },
    "resourceQuery": {
      "not": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    },
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "javascript/auto",
    "use": [
      {
        "loader": "builtin:swc-loader",
        "options": {
          "env": {
            "coreJs": "3.47",
            "mode": "entry",
            "targets": [
              "chrome >= 87",
              "edge >= 88",
              "firefox >= 78",
              "safari >= 14",
            ],
          },
          "isModule": "unknown",
          "jsc": {
            "experimental": {
              "cacheRoot": "node_modules/.cache/.swc",
              "keepImportAttributes": true,
            },
            "externalHelpers": true,
            "output": {
              "charset": "ascii",
            },
            "parser": {
              "decorators": true,
              "syntax": "typescript",
              "tsx": true,
            },
            "transform": {
              "decoratorMetadata": true,
              "legacyDecorator": true,
              "react": {
                "development": false,
                "refresh": false,
                "runtime": "automatic",
              },
              "useDefineForClassFields": false,
            },
          },
          "rspackExperiments": {
            "collectTypeScriptInfo": {
              "exportedEnum": false,
              "typeExports": true,
            },
          },
        },
      },
    ],
  },
  {
    "resourceQuery": /\\[\\?&\\]raw\\(\\?:&\\|=\\|\\$\\)/,
    "test": /\\\\\\.\\(\\?:js\\|jsx\\|mjs\\|cjs\\|ts\\|tsx\\|mts\\|cts\\)\\$/,
    "type": "asset/source",
  },
]
`;
